--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1BDAF0AD4A22AE9E99582D8F62E0BBD9
-ProjectName=First Person BP Game Template
+ProjectName=Physics Project
+
