--- a/MiniGamesPhysicsUE.uproject
+++ b/MiniGamesPhysicsUE.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.6",
+	"EngineAssociation": "{B5DA56D5-484F-FA34-60E5-C0AD74D54AE0}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
